Fix blog layout bug

--- a/site/_sass/_main.scss
+++ b/site/_sass/_main.scss
@@ -52,6 +52,10 @@ a {
   width: $breakpoint;
 }
 
+.blog-wrapper {
+  display: block;
+}
+
 .sidebar {
   width: 15.4rem;
   margin: 0 .8rem 0 0;
